2007-04-17  Alp Toker  <alp@atoker.com>

	* Array.cs: Make GetRank() icall private. Subclasses should use the
	public Rank property.

2007-04-16  Jeffrey Stedfast  <fejj@novell.com>

	* WindowsConsoleDriver.cs: Get rid of unused Echo property.

	* NullConsoleDriver.cs: Get rid of Echo property.

	* IConsoleDriver.cs: Get rid of Echo property.

	* ConsoleDriver.cs (Echo::get/set): Removed, not needed.

	* TermInfoDriver.cs (Echo::get/set): Removed, this isn't necessary
	and is confusing.
	(ReadKey): If we are intercepting the key, call SetEcho (false)
	and then reset back to true after reading the key.
	(ReadLine): Same idea here.
	(GetCursorPosition): We no longer need to keep track of the
	previous echo state, we no longer have it :)

2007-04-16  Jeffrey Stedfast  <fejj@novell.com>

	Fix for bug #80710 (and a bug I introduced in my last fix due to
	this code assuming the underlying term echo state was always
	false) and other buglets that I noticed.

	* TermInfoDriver.cs (ReadLine): Set (term) Echo to false as we do
	our own manual echoing which prevents ^H from getting displayed on
	the screen when the user hits backspace.
	(ReadLine): If the user hits Backspace and builder.Length is 0, DO
	NOT echo the backspace back to the console, ever.
	(ReadLine): Only echo characters back to the console if echo is
	set to true. Seems the Echo ConsoleDriver property is a Mono
	extension, and I'm assuming this is the intended behavior? I can't
	see what else the Echo property would be useful for...

2007-04-16  Jeffrey Stedfast  <fejj@novell.com>

	Fixes bug #81050

	* TermInfoDriver.cs: Renamed the noEcho variable to echo, makes
	the logic cleaner/simpler/etc. Plus it was never actually used
	other than in the property methods which are called Echo.
	(Init): Call ConsoleDriver.SetEcho() with the 'echo' value -
	allows for a slight optimization if called from within the
	Echo::set property.
	(GetCursorPosition): Instead of calling the Echo property methods,